shodrone.plugin.figure/src/main/java/gen/FigureParser.java
// Generated from FigureParser.g4 by ANTLR 4.13.2

package gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FigureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DSL=1, VERSION=2, DRONETYPE=3, POSITION=4, VELOCITY=5, DISTANCE=6, BEFORE=7, 
		AFTER=8, GROUP=9, ENDBEFORE=10, ENDAFTER=11, ENDGROUP=12, MOVE=13, MOVEPOS=14, 
		ROTATE=15, LIGHTSON=16, LIGHTSOFF=17, PAUSE=18, PI=19, DOT=20, COMMA=21, 
		SEMICOLON=22, LPAREN=23, RPAREN=24, ASSIGN=25, ADD=26, SUB=27, MUL=28, 
		DIV=29, LINE=30, RECTANGLE=31, CIRCLE=32, CIRCUMFERENCE=33, RED=34, YELLOW=35, 
		GREEN=36, VERSIONNUMBER=37, NEGNUMBER=38, POSNUMBER=39, DOUBLENUMBER=40, 
		IDENTIFIER=41, WS=42;
	public static final int
		RULE_start = 0, RULE_header = 1, RULE_version = 2, RULE_dronetype = 3, 
		RULE_mainBody = 4, RULE_positions = 5, RULE_velocities = 6, RULE_distance = 7, 
		RULE_vector = 8, RULE_shapes = 9, RULE_line = 10, RULE_rectangle = 11, 
		RULE_circle = 12, RULE_circumference = 13, RULE_argumentList3 = 14, RULE_argumentList4 = 15, 
		RULE_expression = 16, RULE_shapeFunction = 17, RULE_lightsOn = 18, RULE_lightsOff = 19, 
		RULE_move = 20, RULE_rotate = 21, RULE_movePos = 22, RULE_color = 23, 
		RULE_before = 24, RULE_statement = 25, RULE_group = 26, RULE_pause = 27, 
		RULE_lightsOnStatement = 28, RULE_after = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "header", "version", "dronetype", "mainBody", "positions", "velocities", 
			"distance", "vector", "shapes", "line", "rectangle", "circle", "circumference", 
			"argumentList3", "argumentList4", "expression", "shapeFunction", "lightsOn", 
			"lightsOff", "move", "rotate", "movePos", "color", "before", "statement", 
			"group", "pause", "lightsOnStatement", "after"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DSL'", "'version'", "'DroneType'", "'Position'", "'Velocity'", 
			"'Distance'", "'before'", "'after'", "'group'", "'endbefore'", "'endafter'", 
			"'endgroup'", "'move'", "'movePos'", "'rotate'", "'lightsOn'", "'lightsOff'", 
			"'pause'", "'PI'", "'.'", "','", "';'", "'('", "')'", "'='", "'+'", "'-'", 
			"'*'", "'/'", "'Line'", "'Rectangle'", "'Circle'", "'Circumference'", 
			"'RED'", "'YELLOW'", "'GREEN'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DSL", "VERSION", "DRONETYPE", "POSITION", "VELOCITY", "DISTANCE", 
			"BEFORE", "AFTER", "GROUP", "ENDBEFORE", "ENDAFTER", "ENDGROUP", "MOVE", 
			"MOVEPOS", "ROTATE", "LIGHTSON", "LIGHTSOFF", "PAUSE", "PI", "DOT", "COMMA", 
			"SEMICOLON", "LPAREN", "RPAREN", "ASSIGN", "ADD", "SUB", "MUL", "DIV", 
			"LINE", "RECTANGLE", "CIRCLE", "CIRCUMFERENCE", "RED", "YELLOW", "GREEN", 
			"VERSIONNUMBER", "NEGNUMBER", "POSNUMBER", "DOUBLENUMBER", "IDENTIFIER", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FigureParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FigureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public MainBodyContext mainBody() {
			return getRuleContext(MainBodyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FigureParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			header();
			setState(61);
			mainBody();
			setState(62);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode DSL() { return getToken(FigureParser.DSL, 0); }
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public DronetypeContext dronetype() {
			return getRuleContext(DronetypeContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(DSL);
			setState(65);
			version();
			setState(66);
			dronetype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionContext extends ParserRuleContext {
		public TerminalNode VERSION() { return getToken(FigureParser.VERSION, 0); }
		public TerminalNode VERSIONNUMBER() { return getToken(FigureParser.VERSIONNUMBER, 0); }
		public TerminalNode SEMICOLON() { return getToken(FigureParser.SEMICOLON, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(VERSION);
			setState(69);
			match(VERSIONNUMBER);
			setState(70);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DronetypeContext extends ParserRuleContext {
		public TerminalNode DRONETYPE() { return getToken(FigureParser.DRONETYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FigureParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(FigureParser.SEMICOLON, 0); }
		public DronetypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dronetype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitDronetype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DronetypeContext dronetype() throws RecognitionException {
		DronetypeContext _localctx = new DronetypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dronetype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(DRONETYPE);
			setState(73);
			match(IDENTIFIER);
			setState(74);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainBodyContext extends ParserRuleContext {
		public PositionsContext positions() {
			return getRuleContext(PositionsContext.class,0);
		}
		public VelocitiesContext velocities() {
			return getRuleContext(VelocitiesContext.class,0);
		}
		public DistanceContext distance() {
			return getRuleContext(DistanceContext.class,0);
		}
		public ShapesContext shapes() {
			return getRuleContext(ShapesContext.class,0);
		}
		public BeforeContext before() {
			return getRuleContext(BeforeContext.class,0);
		}
		public PauseContext pause() {
			return getRuleContext(PauseContext.class,0);
		}
		public LightsOnStatementContext lightsOnStatement() {
			return getRuleContext(LightsOnStatementContext.class,0);
		}
		public AfterContext after() {
			return getRuleContext(AfterContext.class,0);
		}
		public List<GroupContext> group() {
			return getRuleContexts(GroupContext.class);
		}
		public GroupContext group(int i) {
			return getRuleContext(GroupContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitMainBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainBodyContext mainBody() throws RecognitionException {
		MainBodyContext _localctx = new MainBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			positions();
			setState(77);
			velocities();
			setState(78);
			distance();
			setState(79);
			shapes();
			setState(80);
			before();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==GROUP) {
				{
				{
				setState(81);
				group();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(87);
					statement();
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(93);
			pause();
			setState(94);
			lightsOnStatement();
			setState(95);
			after();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PositionsContext extends ParserRuleContext {
		public List<TerminalNode> POSITION() { return getTokens(FigureParser.POSITION); }
		public TerminalNode POSITION(int i) {
			return getToken(FigureParser.POSITION, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(FigureParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FigureParser.IDENTIFIER, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(FigureParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(FigureParser.ASSIGN, i);
		}
		public List<VectorContext> vector() {
			return getRuleContexts(VectorContext.class);
		}
		public VectorContext vector(int i) {
			return getRuleContext(VectorContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(FigureParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(FigureParser.SEMICOLON, i);
		}
		public PositionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitPositions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PositionsContext positions() throws RecognitionException {
		PositionsContext _localctx = new PositionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_positions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				match(POSITION);
				setState(98);
				match(IDENTIFIER);
				setState(99);
				match(ASSIGN);
				setState(100);
				vector();
				setState(101);
				match(SEMICOLON);
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==POSITION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocitiesContext extends ParserRuleContext {
		public List<TerminalNode> VELOCITY() { return getTokens(FigureParser.VELOCITY); }
		public TerminalNode VELOCITY(int i) {
			return getToken(FigureParser.VELOCITY, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(FigureParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FigureParser.IDENTIFIER, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(FigureParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(FigureParser.ASSIGN, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(FigureParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(FigureParser.SEMICOLON, i);
		}
		public List<TerminalNode> PI() { return getTokens(FigureParser.PI); }
		public TerminalNode PI(int i) {
			return getToken(FigureParser.PI, i);
		}
		public List<TerminalNode> DIV() { return getTokens(FigureParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(FigureParser.DIV, i);
		}
		public List<TerminalNode> POSNUMBER() { return getTokens(FigureParser.POSNUMBER); }
		public TerminalNode POSNUMBER(int i) {
			return getToken(FigureParser.POSNUMBER, i);
		}
		public List<TerminalNode> DOUBLENUMBER() { return getTokens(FigureParser.DOUBLENUMBER); }
		public TerminalNode DOUBLENUMBER(int i) {
			return getToken(FigureParser.DOUBLENUMBER, i);
		}
		public VelocitiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocities; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitVelocities(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocitiesContext velocities() throws RecognitionException {
		VelocitiesContext _localctx = new VelocitiesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_velocities);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(107);
				match(VELOCITY);
				setState(108);
				match(IDENTIFIER);
				setState(109);
				match(ASSIGN);
				setState(115);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PI:
					{
					setState(110);
					match(PI);
					setState(111);
					match(DIV);
					setState(112);
					match(POSNUMBER);
					}
					break;
				case DOUBLENUMBER:
					{
					setState(113);
					match(DOUBLENUMBER);
					}
					break;
				case POSNUMBER:
					{
					setState(114);
					match(POSNUMBER);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(117);
				match(SEMICOLON);
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VELOCITY );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DistanceContext extends ParserRuleContext {
		public TerminalNode DISTANCE() { return getToken(FigureParser.DISTANCE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FigureParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(FigureParser.ASSIGN, 0); }
		public TerminalNode POSNUMBER() { return getToken(FigureParser.POSNUMBER, 0); }
		public TerminalNode SEMICOLON() { return getToken(FigureParser.SEMICOLON, 0); }
		public DistanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distance; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitDistance(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DistanceContext distance() throws RecognitionException {
		DistanceContext _localctx = new DistanceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_distance);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(DISTANCE);
			setState(123);
			match(IDENTIFIER);
			setState(124);
			match(ASSIGN);
			setState(125);
			match(POSNUMBER);
			setState(126);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VectorContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(FigureParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FigureParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FigureParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(FigureParser.RPAREN, 0); }
		public List<TerminalNode> NEGNUMBER() { return getTokens(FigureParser.NEGNUMBER); }
		public TerminalNode NEGNUMBER(int i) {
			return getToken(FigureParser.NEGNUMBER, i);
		}
		public List<TerminalNode> POSNUMBER() { return getTokens(FigureParser.POSNUMBER); }
		public TerminalNode POSNUMBER(int i) {
			return getToken(FigureParser.POSNUMBER, i);
		}
		public VectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vector; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitVector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VectorContext vector() throws RecognitionException {
		VectorContext _localctx = new VectorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(LPAREN);
			setState(129);
			_la = _input.LA(1);
			if ( !(_la==NEGNUMBER || _la==POSNUMBER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(130);
			match(COMMA);
			setState(131);
			_la = _input.LA(1);
			if ( !(_la==NEGNUMBER || _la==POSNUMBER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(132);
			match(COMMA);
			setState(133);
			_la = _input.LA(1);
			if ( !(_la==NEGNUMBER || _la==POSNUMBER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(134);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShapesContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<RectangleContext> rectangle() {
			return getRuleContexts(RectangleContext.class);
		}
		public RectangleContext rectangle(int i) {
			return getRuleContext(RectangleContext.class,i);
		}
		public List<CircleContext> circle() {
			return getRuleContexts(CircleContext.class);
		}
		public CircleContext circle(int i) {
			return getRuleContext(CircleContext.class,i);
		}
		public List<CircumferenceContext> circumference() {
			return getRuleContexts(CircumferenceContext.class);
		}
		public CircumferenceContext circumference(int i) {
			return getRuleContext(CircumferenceContext.class,i);
		}
		public ShapesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shapes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitShapes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShapesContext shapes() throws RecognitionException {
		ShapesContext _localctx = new ShapesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_shapes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(140);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LINE:
					{
					setState(136);
					line();
					}
					break;
				case RECTANGLE:
					{
					setState(137);
					rectangle();
					}
					break;
				case CIRCLE:
					{
					setState(138);
					circle();
					}
					break;
				case CIRCUMFERENCE:
					{
					setState(139);
					circumference();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 16106127360L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public TerminalNode LINE() { return getToken(FigureParser.LINE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FigureParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(FigureParser.LPAREN, 0); }
		public ArgumentList3Context argumentList3() {
			return getRuleContext(ArgumentList3Context.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FigureParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(FigureParser.SEMICOLON, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(LINE);
			setState(145);
			match(IDENTIFIER);
			setState(146);
			match(LPAREN);
			setState(147);
			argumentList3();
			setState(148);
			match(RPAREN);
			setState(149);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RectangleContext extends ParserRuleContext {
		public TerminalNode RECTANGLE() { return getToken(FigureParser.RECTANGLE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FigureParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(FigureParser.LPAREN, 0); }
		public ArgumentList4Context argumentList4() {
			return getRuleContext(ArgumentList4Context.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FigureParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(FigureParser.SEMICOLON, 0); }
		public RectangleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rectangle; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FigureParserVisitor ) return ((FigureParserVisitor<? extends T>)visitor).visitRectangle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RectangleContext rectangle() throws RecognitionException {
		RectangleContext _localctx = new RectangleContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_rectangle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(RECTANGLE);
			setState(152);
			match(IDENTIFIER);
			setState(153);
			match(LPAREN);
			setState(154);
			argumentList4();
			setState(155);
			match(RPAREN);
			setState(156);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
